# web-game-server

./: .dockerignore  .env  .env.example  .gitignore  COMPLETION_SUMMARY.md  Cargo.toml  DEPLOYMENT_QUICKSTART.md  DOCKER_DEPLOYMENT.md  Dockerfile  Makefile  PROGRESS.md  PROJECT_SUMMARY.md  README.md  SLOT_CONFIG_README.md  current_progress.md  docker-compose.dev.yml  docker-compose.yml  init_slot_config.sql  nginx.conf  schema.sql
.github/workflows/: docker-publish.yml
.sqlx/: query-02f69c49ce4e7a6c882d1801bbaad3ac6a9dfeb204e46f53bfa001f5dfa08e86.json  query-102a487ace3fabeb9161043591af1d9f80183b7e685176ed1e87cdea866cb3f2.json  query-219e167b9d6df2ebb9238bb8cd48e25565a6f3bad2d50108077217c7f8dc30be.json  query-5223cc0f3dfb58773aedcba97cedd833b43bedb75a4f2a3ffa2e7db8af7bd2f0.json  query-5c8a5e943589c2c27d229253b3b5f7f14c025721b975a6347a94279b7da07906.json  query-6ffece46385ec4fbdc4dc45fc8981381f9e6cb6b78b47af510673f474710e87e.json  query-8df8e7dbfcc2530d6104d8184014202ac36e0a5b629017c07f021b07d2f70bd2.json  query-8eca8e17b0686c4b41e7575a7c3029fa6733723426426331438c7a33f946dd2a.json  query-99206229fa99e5f9dca966cf109b5aa2c50cdc42ba38a7ad4a089c648cdf9fc8.json  query-b754209cea079e37b59160a8d674095771366c3a1a27c259f49eb0b5a10be79f.json  query-e013ebbda4aa943b2e5601ebe6c483d3d394d34642d67f94003b78b9d08a2083.json  query-e6fc6aafe1f88578e2955c831a0bd064c4cd39936d26410d2283d152924f2e02.json
admin/: index.html
game_server/: .env  Cargo.toml  README.md  SUMMARY.md  game_server.db  test_api.sh
game_server/migrations/: init.sql
game_server/src/: main.rs
game_server/src/handlers/: auth.rs  game.rs  mod.rs
game_server/src/middleware/: auth.rs
game_server/src/models/: user.rs
game_server/src/utils/: jwt.rs  password.rs
src/: main.rs  slot_config_api.rs  slots.rs  universal_slots.rs
