[package]
name = "saber"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
env_logger = "0.10"
dotenv = "0.15"
rand = "0.8"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
