[package]
name = "saber"
version = "0.3.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
