[package]
name = "saber"
version = "0.3.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "time", "macros", "json"], default-features = false }
rand = "0.9.1"
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
