[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
actix-web = "4"
actix-cors = "0.7"
actix-web-httpauth = "0.8"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT token 处理 - 使用更早的版本
jsonwebtoken = "7"

# 数据库
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }

# 密码哈希
sha2 = "0.10"
hex = "0.4"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 环境变量
dotenv = "0.15"

# 日志
env_logger = "0.10"
log = "0.4"

# UUID 生成
uuid = { version = "1", features = ["v4", "serde"] }

# 验证
validator = { version = "0.16", features = ["derive"] }
