[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-web-httpauth = "0.8.2"

# 异步运行时
tokio = { version = "1.45.1", features = ["full"] }

# 序列化/反序列化
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# JWT token 处理 - 使用更早的版本
jsonwebtoken = "9.3.1"

# 数据库
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }

# 密码哈希
sha2 = "0.10.9"
hex = "0.4.3"

# 时间处理
chrono = { version = "0.4.41", features = ["serde"] }

# 环境变量
dotenv = "0.15"

# 日志
env_logger = "0.11.8"
log = "0.4.27"

# UUID 生成
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# 验证
validator = { version = "0.20.0", features = ["derive"] }
